# stylist

./: .env.local.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/api/: Dockerfile.dev  package.json
apps/api/src/: app.ts  index.ts
apps/api/src/adapters/: secrets.ts  storage.ts
apps/api/src/routes/: health.test.ts  health.ts  users.test.ts  users.ts
apps/web/: index.html  package.json  quasar.config.ts  tsconfig.json
apps/web/src/: App.vue  env.d.ts
apps/web/src/pages/: HealthPage.vue
apps/web/src/router/: index.ts
infrastructure/: docker.test.ts
services/ai/: pyproject.toml
